--- a/index.html
+++ b/index.html
@@ -262,8 +262,10 @@
                     ],
                 },
             };
-            for (let i = 0; i < 12; ++i) {
-                TABS.all.items = [...TABS.all.items];
+            for (let i = 0; i < 6; ++i) {
+                TABS.all.items = []
+                    .concat(TABS.all.items)
+                    .concat(TABS.all.items);
             }
             const TABS_KEYS = Object.keys(TABS);
 
