another fix for tabs loop

--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
                 },
             };
             for (let i = 0; i < 6; ++i) {
-                const arr = TABS.all.items;
-                TABS.all.items = arr.concat(arr);
+                TABS.all.items = TABS.all.items.concat(TABS.all.items);
             }
             const TABS_KEYS = Object.keys(TABS);
 
