--- a/client/index.html
+++ b/client/index.html
@@ -10,13 +10,13 @@
         type="font/woff2"
         crossorigin="anonymous"
     />
-    <script defer src="vendors/react-with-dom.js"></script>
+    <script defer src="./vendors/react-with-dom.js"></script>
     <link rel="stylesheet" type="text/css" href="src/reset.css" />
     <link rel="stylesheet" type="text/css" href="src/styles.css" />
 </head>
     <body>
         <div style="display: flex; flex-direction: column; height: 100%; justify-content: space-between;" id="root"></div>
         <script type="module" src="/src/main.jsx"></script>
-        <script defer src="vendors/babel.min.js"></script>
+        <script defer src="./vendors/babel.min.js"></script>
     </body>
 </html>
