--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
     <body>
         <div style="display: flex; flex-direction: column; height: 100%; justify-content: space-between;" id="root"></div>
-        
+        <img src="./assets/arrow-down-171680d7.svg" />
         <script defer src="./vendors/babel.min.js"></script>
     </body>
 </html>
