delete async script

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,6 @@
 </head>
     <body>
         <div style="display: flex; flex-direction: column; height: 100%; justify-content: space-between;" id="root"></div>
-        <script async type="module" src="/src/main.jsx"></script>
+        <script type="module" src="/src/main.jsx"></script>
     </body>
 </html>
