--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="This app will help to handle your smart house" />
     <title>Яндекс.Дом</title>
     <link rel="stylesheet" type="text/css" href="src/reset.css" />
     <link rel="stylesheet" type="text/css" href="src/styles.css" />
